tests/error/forcing/app.mml
let f (x: int) = x in f true
